fix display on mobile

--- a/schedule_manager_ui/templates/styles.css
+++ b/schedule_manager_ui/templates/styles.css
@@ -5,9 +5,11 @@ body {
     padding: 0;
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
-    align-items: flex-start;
+    align-items: center;
+    /* min-width: fit-content; */
     min-height: 100vh;
+    /* width: 100%;
+    height: 100%; */
 }
 h1 {
     text-align: center;
@@ -67,9 +69,9 @@ button.auth:hover {
     justify-content: flex-end;
 }
 .container {
-    width: 80%;
+    min-width: 80%;
     max-width: 900px;
-    margin: 20px auto;
+    margin: 20px;
     padding: 20px;
     background-color: white;
     border-radius: 10px;
@@ -95,18 +97,20 @@ th, td {
 th {
     background-color: #007BFF;
     color: white;
-    /* position: sticky; */
     top: 0;
     z-index: 1;
 }
 tr:nth-child(even) {
     background-color: #f2f2f2;
 }
-@media (max-width: 768px) {
-    .container {
-        width: 90%;
-    }
+@media (max-width: 650px) {
     table, th, td {
         font-size: 14px;
+    }
+    td, th{
+        padding: 8px 12px;
+        min-height: 1em;
+        display:block;
+        border: none;
     }
 }
